# xbrl-reports-indexes

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: publish.yaml  test.yaml
arelle-stubs/arelle/: Cntlr.pyi  DialogRssWatch.pyi  FileSource.pyi  ModelDocument.pyi  ModelInstanceObject.pyi  ModelObject.pyi  ModelObjectFactory.pyi  ModelRssItem.pyi  ModelRssObject.pyi  ModelValue.pyi  ModelXbrl.pyi  RenderingEvaluator.pyi  UrlUtil.pyi  WebCache.pyi  XbrlConst.pyi  XmlUtil.pyi
arelle-stubs/arelle/plugin/xbrlDB/: SqlDb.pyi
src/xbrlreportsindexes/: __init__.py  cmd_line_util.py  run_db_tasks.py
src/xbrlreportsindexes/cache/: esef_entity-data.pkl  esef_entity_other_name-data.pkl  esef_filing-data.pkl  esef_filing_lang-data.pkl  esef_inferred_filing_language-data.pkl  sec_cik_ticker_mapping-data.pkl  sec_filer-data.pkl  sec_former_names-data.pkl  sec_industry-data.pkl  sec_industry_level-data.pkl  sec_industry_structure-data.pkl  sp_companies_ciks-data.pkl
src/xbrlreportsindexes/core/: arelle_utils.py  constants.py  data_utils.py  db_utils.py  index_db.py
src/xbrlreportsindexes/model/: __init__.py  base_model.py  create_view.py  esef_index_model.py  sec_feeds_model.py  types_mapping.py
tests/: const.py  test_esef_first_load.py  test_esef_second_load.py  test_initialize_db.py  test_sec_first_load.py  test_sec_second_load.py  test_sec_third_load.py
tests/mock_test_data/: gather_test_mocks.py  test_data.txt
tests/mock_test_data/esef/: lei
tests/mock_test_data/esef/index/: index_01.json  index_02.json
tests/mock_test_data/esef/isin/: 213800FF2R23ALJQOP04  213800LVRYDERSJAAZ73  213800U1K395G8PK4I21  25940037UC4MNP02D242  259400NAPDFBOTNCRL54  259400T6CRXYOG6H8U09  7CUNS533WID6K7DGFI87
tests/mock_test_data/esef/json_xbrl/: 213800FF2R23ALJQOP04-2021-12-31-T01.json  213800LVRYDERSJAAZ73-2021-12-31-T01.json  213800U1K395G8PK4I21-2021-12-31-T01.json  25940037UC4MNP02D242-2020-12-31.json  25940037UC4MNP02D242-2021-12-31.json  GKTAURON-SprFinan-2021-12-31-PL.json  cabk-2020-12-31.json  cabk-2021-12-31.json  esef_GKTPE_SprawozdanieFinansowe2020.json  zep_2021-12-31_pl.json
tests/mock_test_data/pickles/: esef_test_data.pkl  sec_test_data.pkl
tests/mock_test_data/sec/ciks/: 0000810136  0001534881  0001658566  0001691994  0001695357  (+1 more)
(+7 files in other folders)
